[package]
name = "compe-programing-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ndarray = "0.13.0"
# petgraph = "0.5.0"
maplit = "1.0.2"
itertools = "0.9.0"
proconio = { version = "0.3.6", features = ["derive"] }
